[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ScrollingBackground/ScrollingBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ScrollingBuildings/ScrollingBuildings.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/warped city files/environment/background/buildings-bg.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UILayer.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainMenu/Logo/Logo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MainMenu/MainMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MainMenu/OptionsSubmenu/OptionsSubmenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Spaceship/Spaceship.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music/menu_theme.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "spaceshipArrives"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 3.36359, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.392292, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 300, 126 ), Vector2( 780, 325 ) ]
}

[node name="Main" type="Node2D"]
editor/display_folded = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollingBackground" parent="." instance=ExtResource( 2 )]
updateScreen = false
reset = false
testAnimation = false
distance = 800

[node name="ScrollingFarBuildings" parent="." instance=ExtResource( 3 )]
position = Vector2( 116, 611.2 )
scale = Vector2( 2, 2 )
buildingTexture = ExtResource( 4 )
speed = 0.7
mirrorDistance = 150.0
visibleHeightPercentage = 0.6

[node name="ScrollingBuildings" parent="." instance=ExtResource( 3 )]
position = Vector2( 291, 488.3 )
scale = Vector2( 2, 2 )
speed = 0.9
mirrorDistance = 200.0
visibleHeightPercentage = 0.65

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Logo" parent="UILayer" instance=ExtResource( 6 )]

[node name="MainButtons" parent="UILayer" instance=ExtResource( 7 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -166.0
margin_right = 261.0
margin_bottom = 75.0

[node name="OptionsSubmenu" parent="UILayer" instance=ExtResource( 8 )]
visible = false

[node name="Spaceship" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 300, 126 )
scale = Vector2( 4, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spaceship"]
anims/spaceshipArrives = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -40.0
autoplay = true

[node name="Tween" type="Tween" parent="."]
[connection signal="transition_updated" from="ScrollingBackground" to="." method="_on_ScrollingBackground_transition_updated"]
[connection signal="transition_updated" from="ScrollingBackground" to="ScrollingFarBuildings" method="_on_ScrollingBackground_transition_updated"]
[connection signal="transition_updated" from="ScrollingBackground" to="ScrollingBuildings" method="_on_ScrollingBackground_transition_updated"]
[connection signal="transition_updated" from="ScrollingBackground" to="UILayer/MainButtons" method="_on_ScrollingBackground_transition_updated"]
[connection signal="optionsButtonClicked" from="UILayer/MainButtons" to="UILayer" method="_on_MainButtons_optionsButtonClicked"]
[connection signal="startGameClicked" from="UILayer/MainButtons" to="." method="_on_MainButtons_startGameClicked"]
[connection signal="animation_finished" from="Spaceship/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
